DRILL-6106: Use valueOf method instead of constructor since valueOf has a higher performance by caching frequently requested values.
closes #1099