@@ -51,7 +51,7 @@ public class TestClassCompilationTypes extends ExecTest{
 
     // Evaluate it with varying parameter values; very fast.
     return (Integer) ee.evaluate(new Object[] { // parameterValues
-        new Integer(10), new Integer(11), });
+        Integer.valueOf(10), Integer.valueOf(11), });
   }
 
   private int jdk() throws Exception{
@@ -64,6 +64,6 @@ public class TestClassCompilationTypes extends ExecTest{
 
     // Evaluate it with varying parameter values; very fast.
     return  (Integer) ee.evaluate(new Object[] { // parameterValues
-        new Integer(10), new Integer(11), });
+        Integer.valueOf(10), Integer.valueOf(11), });
   }
 }
